<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/green_question_mark"
    tools:layout_editor_absoluteY="81dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <EditText
        android:id="@+id/user_guess_editText"
        android:layout_width="141dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/_1_100"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/submit_guess_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clue_textview" />

    <TextView
        android:id="@+id/guess_directions_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:fontFamily="serif-monospace"
        android:text="@string/guess_a_number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clue_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clue_textview"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/too_low"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/user_guess_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess_directions_textview" />

    <Button
        android:id="@+id/submit_guess_button"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="263dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/submit_guess"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_guess_editText" />

</android.support.constraint.ConstraintLayout>